2003/11/10 13:12 (-0500) muppetman

	* gperl_marshal.h: new file
	* GClosure.xs, MANIFEST, Makefile.PL: use and install new file.
	Since client code may install custom marshallers, it is a good idea
	to provide some macros to tidy up the error-prone boilerplate that
	needs to go into each of those marshallers.  gperl_marshal.h is
	installed to the same place as gperl.h, but not #included by default,
	and should be #included whereever you implement a custom marshaller.
	it is loaded with commentary and an example marshaller skeleton.

	* GSignal.xs: update commentary on gperl_signal_set_marshaller_for()
	to pointer binding authors to gperl_marshal.h for guidance.

2003/11/10 01:54 (-0500) muppetman

	* GenPod.pm: be a little smarter about enums and flags package names.

2003/11/09 22:59 (-0500) rwmcfa1

	* GenPod.pm: improved the logic for placement of the no methods exist
	message, moved it to podify_methods.

2003/11/09 22:30 (-0500) rwmcfa1

	* ParseXSDoc.pm: allow the (Object::To::Doc) construct in =for object
	directives.

	* GenPod.pm: support the new object directive allowing files to be 
	named independantly from the objects documented in them.

2003/11/10 00:59 pcg

	* Glib.pm, GType.pm: implement == and eq for flags, the latter
        because some functions use eq as a generic comparison function.
        Also enable fallback for flags values, should work just fine.

2003/11/09 18:54 (-0500) muppetman

	writing documentation while mechagodzilla and titanosaur destroy
	tokyo... again.  http://us.imdb.com/title/tt0073373/

	* GClosure.xs, GLog.xs, GMainLoop.xs, GObject.xs, GParamSpec.xs,
	GSignal.xs GType.xs: added lots of apidoc pod.  All the packages in
	GMainLoop.xs go into Glib::MainLoop, and i reordered some of the
	xsubs in GObject.xs but changed no code.

	* GenPod.pm: pod updates, cleanup; use two =over paragraphs inside
	xsub docs to make the argument lists indent readably in the generated
	manpages.
