@@ -1,62 +1,0 @@
-libglib-perl (1.00-1) unstable; urgency=high
-
-  * The actual 1.00 release, at long last.
-
- -- muppet <scott at asofyet dot org>  Thu, 09 Oct 2003 22:30:54 -0400
-
-libglib-perl (1.00rc4-1) unstable; urgency=low
-
-  * Updated for 1.00rc4 release.
-
- -- muppet <scott at asofyet dot org>  Fri, 03 Oct 2003 15:35:04 -0400
-
-libglib-perl (1.00rc3-1) unstable; urgency=low
-
-  * Updated for 1.00rc3 release.
-
- -- muppet <scott at asofyet dot org>  Fri, 26 Sep 2003 04:12:00 -0400
-
-libglib-perl (1.00rc2-1) unstable; urgency=low
-
-  * Updated for 1.00rc2 release.  Removed runtime dependency on ExtUtils::Depends
-    and added a build-time dependency on ExtUtils::PkgConfig
-
- -- muppet <scott at asofyet dot org>  Thu, 19 Sep 2003 00:16:11 -0400
-
-libglib-perl (1.00rc1-1) unstable; urgency=low
-
-  * Updated for 1.00rc1 release.
-
- -- muppet <scott at asofyet dot org>  Thu, 11 Sep 2003 23:27:22 -0400
-
-libglib-perl (0.97-1) unstable; urgency=low
-
-  * Updated for 0.97 release.
-
- -- muppet <scott at asofyet dot org>  Fri, 05 Sep 2003 00:57:22 -0400
-
-libglib-perl (0.96-1) unstable; urgency=low
-
-  * Updated for 0.96 release.
-
- -- muppet <scott at asofyet dot org>  Thu, 28 Aug 2003 22:22:32 -0400
-
-libglib-perl (0.95-1) unstable; urgency=low
-
-  * Updated for 0.95 release.
-
- -- muppet <scott at asofyet dot org>  Fri, 22 Aug 2003 01:10:18 -0400
-
-libglib-perl (0.92-2) unstable; urgency=low
-
-  * Updated to latest CVS.
-  * Fixed some packaging issues.
-
- -- James Curbo <hannibal@adtrw.org>  Sun, 10 Aug 2003 18:10:57 -0500
-
-libglib-perl (0.92-1) unstable; urgency=low
-
-  * Initial Release.
-
- -- James Curbo <hannibal@adtrw.org>  Wed,  6 Aug 2003 18:35:14 -0500
-
