@@ -1,3 +1,8 @@
+2003/11/11 00:36 (-0500) muppetman
+
+	* MANIFEST, debian/*: remove the debian packaging files, since having
+	them in the upstream dist makes it difficult for the maintainers
+
 2003/11/10 13:12 (-0500) muppetman
 
 	* gperl_marshal.h: new file
